# Dagger

./: .clang-format  .gitignore  LICENSE  README.md
dagger/: README.md
dagger/hw/rtl/: !  acl_arb_intf.v  acl_atomics_arb_stall.v  acl_atomics_nostall.v  acl_avm_to_ic.v  acl_data_fifo.v  acl_enable_sink.v  acl_ic_slave_endpoint.v  acl_ic_slave_wrp.v  acl_ll_fifo.v  acl_loop_limiter.v  acl_multistage_accumulator.v  acl_pipeline.v  acl_pop.v  acl_push.v  acl_shift_register.v  acl_stream_fifo.v  acl_task_copy_finish_detector.v  acl_toggle_detect.v  acl_token_fifo_counter.v  acl_valid_fifo_counter.v  acl_work_group_dispatcher.v  acl_work_group_limiter.v  altera_rand_gen.v  altera_rand_gen_basic_block_0.v  altera_rand_gen_basic_block_1.v  altera_rand_gen_function.v  altera_rand_gen_function_wrapper.v  altera_rand_gen_internal.v  async_fifo_channel.sv  ccip_dma.sv  ccip_mmio.sv  ccip_polling.sv  ccip_queue_polling.sv  ccip_std_afu.json  ccip_std_afu.sv  ccip_transmitter.sv  config_defs.vh  connection_manager.sv  cpu_if_defs.vh  (+23 more)
dagger/sw/: CMakeLists.txt
dagger/sw/apps/: CMakeLists.txt
dagger/sw/apps/kvs_client/: CMakeLists.txt  README.md  benchmark.cc  benchmark.h  gen_dataset.py  kvs.dproto  kvs_client.cc  kvs_client_benchmark.cc
dagger/sw/apps/memcached/: CMakeLists.txt  Makefile.in  client.cc  configure  memcached.c  memcached.dproto  version.m4
dagger/sw/apps/memcached/cpp/: memcached_cpp_wrapper.cc  memcached_cpp_wrapper.h
dagger/sw/apps/memcached/doc/: Makefile
dagger/sw/apps/memcached/memcached/: memcached.c  memcached.spec
dagger/sw/apps/memcached/memcached/doc/: protocol-binary.txt
dagger/sw/apps/memcached_client/: Makefile  client.cc
dagger/sw/apps/mica/: CMakeLists.txt  mica_server.cc
dagger/sw/apps/mica/mica/: alloc_pool.c  shm.c  table.c  util.h
dagger/sw/apps/microservices/: CMakeLists.txt  client_zygote.cc  run_services.sh  service_utils.h
dagger/sw/apps/microservices/airport_db/: CMakeLists.txt  airport_db_service.cc  airport_db_service.dproto
dagger/sw/apps/microservices/baggage_service/: CMakeLists.txt  baggage_service.cc  baggage_service.dproto
dagger/sw/apps/microservices/check_in_service/: CMakeLists.txt  check_in_service.cc  check_in_service.dproto
dagger/sw/apps/microservices/citizens_service/: CMakeLists.txt  citizens_service.cc  citizens_service.dproto
dagger/sw/apps/microservices/flight_service/: CMakeLists.txt  flight_service.cc  flight_service.dproto
dagger/sw/apps/microservices/frontend/: CMakeLists.txt  frontend.cc
dagger/sw/apps/microservices/passport_service/: CMakeLists.txt  passport_service.cc  passport_service.dproto
dagger/sw/apps/microservices/stuff_frontend/: CMakeLists.txt  stuff_frontend.cc
dagger/sw/ase_samples/: CMakeLists.txt  joint_ase_process.cc
dagger/sw/codegen/: codegen.py  dagger_write.tmpl  rpc_gen.py
dagger/sw/microbenchmarks/: CMakeLists.txt
dagger/sw/microbenchmarks/benchmark_latency_throughput/: CMakeLists.txt  client.cc  lat_thr.dproto  server.cc
dagger/sw/samples/: client.cc  client_nonblocking.cc  joint_ase_process.cc  joint_nonblocking_ase_process.cc  server.cc
dagger/sw/src/: completion_queue.cc  completion_queue.h  config.h  connection_manager.cc  connection_manager.h  nic.h  rpc_call.h  rpc_client.cc  rpc_client.h  rpc_client_nonblocking.cc  rpc_client_nonblocking.h  rpc_client_nonblocking_base.cc  rpc_client_nonblocking_base.h  rpc_client_pool.h  rpc_header.h  rpc_reassembler.cc  rpc_reassembler.h  rpc_server_thread.cc  rpc_server_thread.h  rpc_threaded_server.cc  rpc_threaded_server.h  rpc_threaded_server_wrapper.cc  rpc_threaded_server_wrapper.h  rx_queue.cc  rx_queue.h  tx_queue.cc  tx_queue.h
dagger/sw/src/network_ctl/: fpga_hssi.h  fpga_hssi_common.c  fpga_hssi_common.h
dagger/sw/src/nic_impl/: nic_ccip.cc  nic_ccip.h  nic_ccip_dma.cc  nic_ccip_dma.h  nic_ccip_mmio.cc  nic_ccip_mmio.h  nic_ccip_polling.cc  nic_ccip_polling.h
dagger/sw/src/utils/: logger.h  utils.h
dagger/sw/tests/: CMakeLists.txt  client_pool_test.cc  end_to_end_test.cc  nic_tests.cc  test.dproto  threaded_server_tests.cc
dagger/sw/tests/system_tests_fpga/: client_pool_tests.cc  client_server_pair.h  main_test.cc  multi_threaded_rpc_tests.cc  nic_tests.cc  nic_tests_upi.cc  single_threaded_rpc_tests.cc  threaded_server_tests.cc
dagger/sw/utils/: configure_hssi.sh
hw/rtl/: async_fifo_channel.sv  ccip_nic_if.vh  ccip_queue_polling.sv  ccip_std_afu.json  ccip_std_afu.sv  ccip_transmitter.sv  connection_manager.sv  general_defs.vh  nic.sv  nic_bram.sv.experimental  nic_counters.sv  pulse_gen.sv  request_queue.sv  rpc.sv  rpc_defs.vh  top_level_network.sv
hw/rtl/build_configs/: loopback_mmio_bdx.txt  loopback_mmio_pac_a10.txt  loopback_upi_bdx.txt  loopback_upi_pac_a10.txt  network_mmio_pac_a10.txt
sw/: CMakeLists.txt
sw/apps/kvs_client/: README.md  benchmark.cc  benchmark.h  kvs.dproto  kvs_client.cc  kvs_client_benchmark.cc
sw/apps/mica/: mica_server.cc
sw/ase_samples/: joint_ase_process.cc  rpc_def.dproto
sw/codegen/: dagger_write.tmpl  rpc_gen.py
sw/microbenchmarks/benchmark_latency_throughput/: client.cc  lat_thr.dproto  server.cc
sw/src/: completion_queue.cc  completion_queue.h  config.h  connection_manager.cc  connection_manager.h  defs.h  nic.h  rpc_call.h  rpc_client_nonblocking_base.cc  rpc_client_nonblocking_base.h  rpc_client_pool.h  rpc_header.h  rpc_server_thread.cc  rpc_server_thread.h  rpc_threaded_server.cc  rpc_threaded_server.h  rx_queue.cc  rx_queue.h  tx_queue.cc  tx_queue.h
sw/src/network_ctl/: fpga_hssi_e40.c  fpga_hssi_e40.h
sw/src/nic_impl/: nic_ccip.cc  nic_ccip.h  nic_ccip_dma.cc  nic_ccip_dma.h  nic_ccip_mmio.cc  nic_ccip_mmio.h  nic_ccip_polling.cc  nic_ccip_polling.h
sw/src/utils/: logger.h  utils.h
sw/tests/: CMakeLists.txt  README.md
sw/tests/system_tests_fpga/: client_pool_tests.cc  client_server_pair.h  main_test.cc  multi_threaded_rpc_tests.cc  nic_tests.cc  nic_tests_upi.cc  single_threaded_rpc_tests.cc  threaded_server_tests.cc
sw/tests/unit_tests/: connection_manager_tests.cc  main_test.cc
sw/utils/: configure_hssi.sh
(+452 files in other folders)
